// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`processHtml Snapshots basic document with headings and paragraphs: html 1`] = `
"
			<article>
				<h1 data-cms-id="cms-0">Main Title</h1>
				<p data-cms-id="cms-1">First paragraph with some text.</p>
				<h2 data-cms-id="cms-2">Subtitle</h2>
				<p data-cms-id="cms-3">Second paragraph with <strong>bold</strong> and <em>italic</em> text.</p>
			</article>
		"
`;

exports[`processHtml Snapshots basic document with headings and paragraphs: entries 1`] = `
{
  "cms-0": {
    "attributes": undefined,
    "childCmsIds": undefined,
    "collectionName": undefined,
    "collectionSlug": undefined,
    "colorClasses": undefined,
    "contentPath": undefined,
    "html": undefined,
    "id": "cms-0",
    "imageMetadata": undefined,
    "parentComponentId": undefined,
    "sourceLine": undefined,
    "sourcePath": undefined,
    "sourceSnippet": undefined,
    "stableId": "b01ea771ec30",
    "tag": "h1",
    "text": "Main Title",
    "variableName": undefined,
  },
  "cms-1": {
    "attributes": undefined,
    "childCmsIds": undefined,
    "collectionName": undefined,
    "collectionSlug": undefined,
    "colorClasses": undefined,
    "contentPath": undefined,
    "html": undefined,
    "id": "cms-1",
    "imageMetadata": undefined,
    "parentComponentId": undefined,
    "sourceLine": undefined,
    "sourcePath": undefined,
    "sourceSnippet": undefined,
    "stableId": "fba53aa51632",
    "tag": "p",
    "text": "First paragraph with some text.",
    "variableName": undefined,
  },
  "cms-2": {
    "attributes": undefined,
    "childCmsIds": undefined,
    "collectionName": undefined,
    "collectionSlug": undefined,
    "colorClasses": undefined,
    "contentPath": undefined,
    "html": undefined,
    "id": "cms-2",
    "imageMetadata": undefined,
    "parentComponentId": undefined,
    "sourceLine": undefined,
    "sourcePath": undefined,
    "sourceSnippet": undefined,
    "stableId": "f9a57c1c9848",
    "tag": "h2",
    "text": "Subtitle",
    "variableName": undefined,
  },
  "cms-3": {
    "attributes": undefined,
    "childCmsIds": undefined,
    "collectionName": undefined,
    "collectionSlug": undefined,
    "colorClasses": undefined,
    "contentPath": undefined,
    "html": "Second paragraph with <strong>bold</strong> and <em>italic</em> text.",
    "id": "cms-3",
    "imageMetadata": undefined,
    "parentComponentId": undefined,
    "sourceLine": undefined,
    "sourcePath": undefined,
    "sourceSnippet": undefined,
    "stableId": "0f10f8d628df",
    "tag": "p",
    "text": "Second paragraph with bold and italic text.",
    "variableName": undefined,
  },
}
`;

exports[`processHtml Snapshots elements with color classes: html 1`] = `
"
			<div>
				<button class="bg-blue-500 text-white hover:bg-blue-600 px-4 py-2" data-cms-id="cms-0">Primary</button>
				<button class="bg-gray-200 text-gray-800 border border-gray-300" data-cms-id="cms-1">Secondary</button>
				<a class="text-blue-600 hover:text-blue-800 underline" href="#" data-cms-id="cms-2">Link</a>
			</div>
		"
`;

exports[`processHtml Snapshots elements with color classes: entries 1`] = `
{
  "cms-0": {
    "attributes": undefined,
    "childCmsIds": undefined,
    "collectionName": undefined,
    "collectionSlug": undefined,
    "colorClasses": {
      "bg": {
        "value": "bg-blue-500",
      },
      "hoverBg": {
        "value": "hover:bg-blue-600",
      },
      "text": {
        "value": "text-white",
      },
    },
    "contentPath": undefined,
    "html": undefined,
    "id": "cms-0",
    "imageMetadata": undefined,
    "parentComponentId": undefined,
    "sourceLine": undefined,
    "sourcePath": undefined,
    "sourceSnippet": undefined,
    "stableId": "34690555ce10",
    "tag": "button",
    "text": "Primary",
    "variableName": undefined,
  },
  "cms-1": {
    "attributes": undefined,
    "childCmsIds": undefined,
    "collectionName": undefined,
    "collectionSlug": undefined,
    "colorClasses": {
      "bg": {
        "value": "bg-gray-200",
      },
      "border": {
        "value": "border-gray-300",
      },
      "text": {
        "value": "text-gray-800",
      },
    },
    "contentPath": undefined,
    "html": undefined,
    "id": "cms-1",
    "imageMetadata": undefined,
    "parentComponentId": undefined,
    "sourceLine": undefined,
    "sourcePath": undefined,
    "sourceSnippet": undefined,
    "stableId": "177a03a18137",
    "tag": "button",
    "text": "Secondary",
    "variableName": undefined,
  },
  "cms-2": {
    "attributes": {
      "href": {
        "value": "#",
      },
    },
    "childCmsIds": undefined,
    "collectionName": undefined,
    "collectionSlug": undefined,
    "colorClasses": {
      "hoverText": {
        "value": "hover:text-blue-800",
      },
      "text": {
        "value": "text-blue-600",
      },
    },
    "contentPath": undefined,
    "html": undefined,
    "id": "cms-2",
    "imageMetadata": undefined,
    "parentComponentId": undefined,
    "sourceLine": undefined,
    "sourcePath": undefined,
    "sourceSnippet": undefined,
    "stableId": "16945f7e3926",
    "tag": "a",
    "text": "Link",
    "variableName": undefined,
  },
}
`;
